<resources>
    <string name="app_name">xinze</string>

    <string name="client_app_name">应用市场</string>
    <string name="home_general_shipper">普通发货</string>
    <string name="home_find_goods">找货</string>

    <string name="pwd">密码</string>
    <string name="uname">用户名</string>
    <string name="forget_pwd">忘记密码</string>
    <string name="register">注&#160;&#160;&#160;&#160;册</string>
    <string name="login">登&#160;&#160;&#160;&#160;陆</string>
    <string name="phone_number">手机号</string>
    <string name="input_phone_number">请输入您的手机号</string>
    <string name="get_verification_code">获取验证码</string>
    <string name="verification_code">验证码</string>
    <string name="input_verification_code">请输入验证码</string>
    <string name="input_pass_word">请输入密码</string>
    <string name="pass_word">密&#160;&#160;&#160;&#160;码</string>
    <string name="unLogin">未登录</string>
    <string name="driver_certification">司机认证</string>
    <string name="my_cars">我的车辆</string>
    <string name="my_routes">常跑路线</string>
    <string name="my_system_message">系统消息</string>
    <string name="my_about_us">关于我们</string>
    <string name="my_help">帮助</string>
    <string name="my">我的</string>
    <string name="exit">退出登录</string>
    <string name="home_service_hotline">服务热线：400&#8211;1245&#8211;566</string>
    <string name="home_directional_shipper">定向货单</string>
    <string name="home_about_us">关于我们</string>
    <string name="home_page">首页</string>
    <string name="my_login_out">退出登录</string>
    <string name="my_drivers">我的司机</string>
    <string name="my_invitation">我的邀请</string>
    <string name="my_change_pwd">修改密码</string>
    <string name="about_us">关于我们</string>
    <string name="about_us_content">
        AppBarLayout 虽然和 Toolbar 没有直接联系，但是当 Toolbar 内置在 AppbarLayout 中的时候，Toolbar 的效果增强了，这使得开发者非常愿意用 AppBarLayout 与 Toolbar 配合使用，这比单独使用 Toolbar 炫丽的多。所以，基本上有 AppBarLayout 的地方就有 Toolbar。通过 AppBarLayout 实现一个可伸缩折叠的 Toolbar 也是本文的目的。

当我们运用 support design 中的组件时，我们应该拥有下面几个最基本的意识：

1. CoordinatorLayout 是这个库的组织容器，一切基于 support design 扩展出来的特性都应该发生在 CoordinatorLayout 及它的子 View 体系中。

2. AppbarLayout 应该作为一个 CoordinatorLayout 的直接子 View，否则它与普通的 LinearLayout 无异。

3. AppbarLayout 的子 View 不仅仅是 Toolbar,它们可以是任何的 View，但通常和 Toolbar 配合使用。
AppBarLayout 基本使用方法

AppBarLayout 是 android support design 这个支持包中的类，前面说过它的一切效果都建立在 CoordinatorLayout 这个父类容器之上，AppBarLayout 要想正常发挥它的所有特性，那么它必须作为 CoordinatorLayout 的直接子类。
引入依赖
        android support design 没有内置在 SDK 中，所以我们需要引入依赖。

compile com.android.support:design:25.0.1

    1

与嵌套滑动组件配合

在 AppBarLayout 官方文档注释中有这么一段。

    AppBarLayout 需要和一个独立的兄弟 View 配合使用，这个兄弟 View 是一个嵌套滑动组件，只有这样 AppBarLayout 才能知道什么时候开始滑动。它们之间关系的绑定通过给嵌套滑动的组件设立特定的 Behavior,那就是 AppBarLayout.ScrollingViewBehavior。

然后，官方还给出了示例。

        上面布局文件中，NestedScrollView 就是那个配套的滑动组件，它需要和 AppBarLayout 进行绑定，所以它必须指定 Behavior。在 xml 中通过

        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        多说两句，有同学可能会想一定要是 NestedScrollView 吗？

        当然不是，在 CoordinatorLayout 中嵌套滑动的本质是一个 NestedScrollingChild 对象。

        NestedScrollingChild 是一个接口，目前它的实现类有 4 个。
        所以除了使用 NestedScrollView,我们还经常使用 RecyclerView 和 SwipeRefreshLayout 作为配套的嵌套滑动组件，这是其它博文都没有提到的，希望大家注意。

        可能大家注意到了上面示例中有 app:layout_scrollFlags 这样的属性，大家一定很好奇，它们是如何作用的。不要着急，下面就讲这一块的内容。
        layout_scrollFlags 滑动效果的配置

        AppBarLayout 本身也是一个垂直方向的 LinearLayout，所以它的滑动主要是针对内部子 View 的滑动。这就需要设立一种规则来定义滑动的行为。

        这个规则就是 AppBarLayout 中内部的子 View 需要在 xml 中配置 layout_scrollFlags。
        layout_scrollFlags 取值有 5 个。
        scroll
        enterAlways
        enterAlwaysCollapsed
        exitUntilCollapsed
        snap


        说实话，这 5 个值并不复杂，但是因为命名的关系，它们有点难以理解，很多人应该就是在这一位置卡壳了很久。因为其它的博文都是直接讲 5 个值的用法，然后再配置上动图来解释说明。而对于我而言，这种方式有值得改进的地方，我更愿意先解释目的再解释手段。
        我们提炼几个关键字。它们分别是滑动、折叠、进入、离开、snap。滑动 scroll滑动是基础，后面的几个属性都是建立在此属性上的。滑动大家应该很好理解，只有在 AppBarLayout 中的子 View 配置了 scroll 属性，这个 AppBarLayout 都会响应。scroll 这个 layout_scrollFlags 使得 Toolbar 像是 NestedScrollView 本身的一部分一样，它们同步响应滑动。
        向上滑动的时候，Toolbar 先滑动，然后 NestedScrollView 中的内容再滑动。
        向下滑动的时候，NestedScrollView 中的内容先滑动，然后 Toolbar 再一起滑动。
    </string>

    <string name="home_regular_route">常跑路线</string>

    <string name="goLogin">去登录</string>
    <string name="unIdentification">未认证</string>
    <string name="goIdentification">去认证</string>
    <string name="certification_commit">提交审核</string>
    <string name="name">姓名</string>
    <string name="isGoIdentification">是否去验证</string>
    <string name="isGoLogin">是否去登录</string>
    <string name="hint_search">搜索</string>

    <string name="orderList">订单列表</string>
    <string name="order_id">订单号：%1$s</string>
    <string name="order_freight">运费：%1$s元</string>
    <string name="order_truck_type">车型：%1$s</string>
    <string name="order_product_name">货物：%1$s</string>
    <string name="order_distance">运距：%1$sKM</string>
    <string name="order_shipper">托运人</string>
    <string name="order_contacts">联系人：%1$s</string>
    <string name="order_freight_details">货运详情</string>
    <string name="order_item_date">发货日期：%1$s</string>
    <string name="order_consignor_and_address">发货人：%1$s\n发货地址：%2$s</string>
    <string name="order_consignee_and_address">收货人：%1$s\n收货地址：%2$s</string>
    <string name="order_car_count"><Data><![CDATA[总车数：<font color="#fb9251">%1$d</font>车]]></Data></string>
    <string name="order_goods_details"><Data><![CDATA[信息费：<font color="#fb9251">%1$s</font>元<br>装车费：<font color="#fb9251">%2$s</font>元/吨<br>卸车费：<font color="#fb9251">%3$s</font>元/吨<br>运费：<font color="#fb9251">%4$s</font>元/吨<br>货品：<font color="#fb9251">%5$s</font><br>路损：<font color="#fb9251">%6$s</font><br>车型：<font color="#fb9251">%7$s</font><br>备注：<font color="#fb9251">%8$s</font><br>]]></Data></string>

    <string name="order_wait_confirm">等待确认中&#8230;</string>
    <string name="order_revoke">撤销订单</string>
    <string name="order_detail">订单详情</string>
    <string name="order_pick_up_goods">取货</string>
    <string name="order_deliver_goods">送达</string>
    <string name="order_confirm_arrive">确认签收</string>
    <string name="order_upload">上传凭证（选填）</string>
    <string name="cancel">取消</string>


    <string name="bill_ordinary">普通货单</string>
    <string name="bill_directional">定向货单</string>

    <string name="send_search_regular">搜常跑</string>
    <string name="send_goods_to">到：</string>
    <string name="send_goods_all">全国</string>
    <string name="send_goods_date">发货日期：%1$s-%2$s</string>
    <string name="send_goods_distance">运距：%1$s公里</string>
    <string name="directional_robbing_bill">抢单\n(%1$d车)</string>
    <string name="bill_robbing">抢单</string>
    <string name="bill_car_count">共%1$s车</string>
    <string name="bill_car_freight">运费：%1$s元</string>
    <string name="regular_all_lines">全部</string>
    <string name="transport_refuse">退单</string><!--（%1$d车）-->
    <string name="transport_confirming">接单（%1$d车）</string>


    <string name="register_read_service"><Data><![CDATA[我已仔细阅读并同意《<font color="#52affc">服务协议</font>》]]></Data></string>
    <string name="next_step">下一步</string>
    <string name="select_read_service"><Data><![CDATA[我已仔细阅读并同意《<font color="#52affc">运输服务合同</font>》]]></Data></string>
    <string name="select_confirm_bill">确定接单</string>
    <string name="select_please_choice">请选择承运车辆</string>
    <string name="select_all_choice">全选</string>
    <string name="select_item_relation"><Data><![CDATA[<font color="#808080" size="28">%1$s</font><font color="#fb9251">>%2$s</font>]]></Data></string>
    <string name="select_item_own"><Data><![CDATA[<font color="#808080" size="28">%1$s</font><font color="#fb9251">%2$s</font>]]></Data></string>
    <string name="select_item_audited"><Data><![CDATA[<font color="#fb9251" size = "28">%1$s</font>]]></Data></string>
    <string name="select_item_audited_and_no_relation"><Data><![CDATA[<font color="#fb9251 size="28">%1$s</font><br/><font color="#52affc" size="24">%2$s</font>]]></Data></string>
    <string name="select_item_audit"><Data><![CDATA[<font color="#16d069 size="28"">%1$s</font>]]></Data></string>
    <string name="select_item_audited_failed"><Data><![CDATA[<font color="#fb9251" size = "28">%1$s</font>]]></Data></string>
    <string name="select_car_not_relation">车辆未关联司机</string>
    <string name="select_go_relation">去关联</string>

    <string name="invite_driver_invite">车主邀请</string>
    <string name="invite_owner_invite">货主邀请</string>
    <string name="invite_detail_refuse">拒绝</string>
    <string name="invite_detail_accept">接受</string>
    <string name="invite_detail_title">邀请详情</string>
    <string name="invite_detail_confirm_content">确定要接受邀请吗?</string>
    <string name="invite_detail_refuse_hint">拒绝理由</string>
    <string name="my_driver_exlpain">1、可以给车辆分配所添加的司机\n2、可以设置是否允许司机用车辆接单\n3、车辆所接订单关联司机跟车主均可见\n4、订单的运费最终结算给车主</string>
    <string name="my_driver_add">添加司机</string>
    <string name="my_driver_explain_top">说明：</string>
    <string name="my_driver_pic_bottom">暂无可分配司机</string>
    <string name="pic_desc">pic</string>
    <string name="my_driver_title">我的司机</string>
    <string name="my_driver_del_bt">删除</string>
    <string name="my_driver_add_title">添加司机</string>
    <string name="driver_add_commit">提交</string>
    <string name="my_driver_add_hint">请输入平台已认证的司机手机号</string>
    <string name="driver_add_phone_tv">手机号</string>


    <string name="driver_submit_success">
        <Data>
            <![CDATA[<font color="#333333" size = "30">审核资料提交成功，</font> <br/><font color="#808080" size = "28"> 客服电话：400-4568-8956</font> ]]>
        </Data>
    </string>

    <string name="driver_name">姓&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;名</string>
    <string name="driver_id_card">身份证号</string>
    <string name="input_number_of_card">请输入身份证号</string>

    <string name="driver_address">现居住地</string>
    <string name="input_address">请选择所在地区</string>
    <string name="detail_address">详细地址</string>
    <string name="input_detail_address">请输入详细地址</string>

    <string name="facadeOfIDCard">身份证正面照</string>
    <string name="facadeOfDriverCard">驾驶证正面照</string>
    <string name="input_name">请输入真实姓名</string>
    <string name="driver_qualifications_upload">资质上传</string>
    <string name="line_edit_from">请选择始发地</string>
    <string name="line_edit_to">请选择目的地</string>
    <string name="confirm">确定</string>
    <string name="address_from">出&#160;&#160;发&#160;&#160;地</string>
    <string name="address_to">目&#160;&#160;的&#160;&#160;地</string>
    <string name="line_add">添加线路</string>


    <string name="my_truck_titile">我的车辆</string>
    <string name="my_truck_add">添加车辆</string>
    <string name="my_truck_pic_bottom">暂无车辆</string>
    <string name="my_truck_exlpain">关联司机:15123654789,可接单\n半挂车/25吨\n审核信息:请选择无车承运证\n2018&#8211;05&#8211;24 10:50</string>
    <string name="my_truck_trucknum">蒙H4562D</string>
    <string name="my_truck_driver_info"><Data><![CDATA[<font color="#52affc">关联司机:%1$s , %2$s</font><br>]]></Data></string>
    <string name="select_driver">
        <Data>
            <![CDATA[<font color="#333333" size = "30">%1$s</font> <br/><font color="#333333" size = "28">%2$s</font> ]]>
        </Data>
    </string>

    <string name="allot_driver_title">分配司机</string>
    <string name="allow">允许</string>
</resources>