<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="@color/gray_background"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:background="@color/white"
        android:layout_marginTop="15dp"
        android:layout_height="wrap_content">
        <TextView
            android:padding="15dp"
            android:textSize="14sp"
            android:text="@string/address_from"
            android:textColor="@color/gray_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:padding="15dp"
            android:id="@+id/line_edit_from"
            android:background="@null"
            android:textSize="14sp"
            android:focusable="true"
            android:focusableInTouchMode="false"
            android:inputType="text"
            android:textColor="@color/themeBlack"
            android:hint="@string/line_edit_from"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:background="@color/gray_background"
        android:layout_height="1dp"/>
    <LinearLayout
        android:orientation="horizontal"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:padding="15dp"
            android:textSize="14sp"
            android:text="@string/address_to"
            android:textColor="@color/gray_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:padding="15dp"
            android:background="@null"
            android:textSize="14sp"
            android:focusable="true"
            android:focusableInTouchMode="false"
            android:inputType="text"
            android:id="@+id/line_edit_to"
            android:textColor="@color/themeBlack"
            android:hint="@string/line_edit_to"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <Button
        android:id="@+id/line_edit_confirm"
        android:text="@string/confirm"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:layout_marginTop="30dp"
        android:layout_margin="15dp"
        android:background="@drawable/shape_round_orange"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>