<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.xinze.xinze.module.certification.view.CertificationActivity">

    <com.xinze.xinze.widget.SimpleToolbar
        android:id="@+id/certification_tool_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/certification_bt"
        android:layout_below="@id/certification_tool_bar"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:text="@string/driver_name"
                android:textColor="@color/themeBlack"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/certification_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/input_name"
                android:inputType="textPersonName"
                android:padding="15dp"
                android:textColor="@color/gray_text"
                android:textSize="12sp" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/my_item_space" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:text="@string/driver_id_card"
                android:textColor="@color/themeBlack"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/certification_number_of_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/input_number_of_card"
                android:padding="15dp"
                android:textColor="@color/gray_text"
                android:textSize="12sp" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/my_item_space" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:text="@string/driver_address"
                android:textColor="@color/themeBlack"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/certification_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:inputType="text"
                android:drawableEnd="@mipmap/right_arrow"
                android:hint="@string/input_address"
                android:padding="15dp"
                android:textColor="@color/gray_text"
                android:textSize="12sp" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/my_item_space" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:text="@string/detail_address"
                android:textColor="@color/themeBlack"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/certification_detail_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/input_detail_address"
                android:padding="15dp"
                android:textColor="@color/gray_text"
                android:textSize="12sp" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="@color/my_item_space" />
        <TextView
            android:padding="15dp"
            android:textColor="@color/themeBlack"
            android:text="@string/driver_qualifications_upload"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Space
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/my_item_space" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:background="@color/white"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/certification_face_of_id_card"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:scaleType="fitXY"
                    android:layout_margin="15dp"
                    android:background="@mipmap/id_card" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="@dimen/res_textSize_15dp"
                    android:text="@string/facadeOfIDCard"
                    android:textColor="@color/gray"
                    android:textSize="14sp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/certification_face_of_driver_card"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:scaleType="fitXY"
                    android:layout_margin="15dp"
                    android:background="@mipmap/driver_card" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="@dimen/res_textSize_15dp"
                    android:text="@string/facadeOfDriverCard"
                    android:textColor="@color/gray"
                    android:textSize="14sp" />


            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/certification_bt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="15dp"
        android:background="@drawable/circle_orange_button"
        android:text="@string/certification_commit"
        android:textColor="@color/white"
        android:textSize="18sp" />

</RelativeLayout>
