<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/white"
    android:orientation="vertical">

    <com.xinze.xinze.widget.SimpleToolbar
        android:id="@+id/login_tool_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:padding="15dp"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/usernameWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/uname" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/passwordWrapper"
            android:layout_width="match_parent"
            android:layout_marginTop="15dp"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/user_pwd"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pwd" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/login"
            android:layout_marginTop="15dp"
            android:background="@drawable/circle_button"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:text="@string/login" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/forget_pwd"
                android:padding="10dp"
                android:layout_margin="10dp"
                android:text="@string/forget_pwd"
                android:textSize="14sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/register"
                android:layout_alignParentEnd="true"
                android:padding="10dp"
                android:textSize="14sp"
                android:layout_margin="10dp"
                android:text="@string/register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RelativeLayout>

    </LinearLayout>
</LinearLayout>