<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.xinze.xinze.widget.SimpleToolbar
        android:id="@+id/find_tool_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/find_goods_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:drawableEnd="@mipmap/goods_pick_up"
                android:gravity="center_vertical"
                android:text="@string/order_id"
                android:textColor="@color/themeBlack"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background"
                android:padding="15dp"
                android:text="@string/order_shipper"
                android:textColor="@color/order_item_text"
                android:textSize="14sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/find_goods_company"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@mipmap/goods_info_department"
                    android:drawablePadding="15dp"
                    android:gravity="center_vertical"
                    android:padding="15dp"

                    android:textColor="@color/themeBlack"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/find_goods_contacts"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/find_goods_company"
                    android:drawablePadding="15dp"
                    android:gravity="center_vertical"
                    android:padding="15dp"
                    android:text="@string/order_contacts"
                    android:textColor="@color/themeBlack"
                    android:textSize="14sp" />

                <ImageView
                    android:id="@+id/find_goods_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="15dp"
                    android:background="@mipmap/phone"
                    android:padding="15dp" />

                <View
                    android:layout_width="1px"
                    android:layout_height="25dp"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="15dp"
                    android:layout_toStartOf="@id/find_goods_phone"
                    android:background="@drawable/line" />
            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background"
                android:padding="15dp"
                android:text="@string/order_freight_details"
                android:textColor="@color/order_item_text"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/find_goods_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:padding="15dp"
                android:text="@string/order_item_date"
                android:textColor="@color/themeBlack"
                android:textSize="14sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@drawable/line" />

            <TextView
                android:id="@+id/find_goods_consignor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:lineSpacingExtra="10dp"
                android:padding="15dp"
                android:text="@string/order_consignor_and_address"
                android:textColor="@color/themeBlack"
                android:textSize="14sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@drawable/line" />

            <TextView
                android:id="@+id/find_goods_consignee"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:lineSpacingExtra="10dp"
                android:padding="15dp"
                android:text="@string/order_consignee_and_address"
                android:textColor="@color/themeBlack"
                android:textSize="14sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@drawable/line" />

            <TextView
                android:id="@+id/find_goods_car_count"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:lineSpacingExtra="10dp"
                android:padding="15dp"
                android:text="@string/order_car_count"
                android:textColor="@color/themeBlack"
                android:textSize="14sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@drawable/line" />

            <TextView
                android:id="@+id/find_goods_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:lineSpacingExtra="10dp"
                android:padding="15dp"
                android:text="@string/order_goods_details"
                android:textColor="@color/themeBlack"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/line"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/order_wait_confirm"
                    android:layout_gravity="center_horizontal"
                    android:padding="15dp"
                    android:textColor="@color/themeOrange"
                    android:textSize="14sp" />

                <Button
                    android:id="@+id/order_revoke"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginBottom="15dp"
                    android:background="@drawable/circle_login_button"
                    android:text="@string/order_revoke"
                    android:textColor="@color/white"
                    android:textSize="18sp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>